<resources>
    <string name="app_name">Gym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Avatar</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">Date: </string>
    <string name="reps_count_text">Count of repetitions: </string>
    <string name="weight_text">Weight: </string>
    <string name="kg">kg.</string>
    <string name="save">Save</string>
    <string name="saved_record_message">Record saved!!!</string>
    <string name="not_saved_record_message">You did not break the record :(</string>
    <string name="number_count_message">Enter the number of repetitions</string>
    <string name="pull_ups">Pull ups</string>
    <string name="push_ups">Push ups</string>
    <string name="squats">Squats</string>
    <string name="share_text">share</string>
    <string name="share_hello_record_text">See my new record!!!</string>
    <string name="exercise_share_text">Exercise:</string>
    <string name="share_record_text">Share record</string>
    <string name="error_text">Error</string>
    <string name="pull_ups_text">Pull ups</string>
    <string name="pull_ups_description">Pull on the crossbar</string>
    <string name="recods_text">My records</string>
    <string name="share_menu">Share</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="title_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, incidunt.</string>
    <string name="description_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum earum, itaque laboriosam natus quas quis quod temporibus totam unde. Atque dolor dolorem enim impedit molestias nemo porro rem voluptatum!</string>
    <string name="add_item">Add exercise</string>
    <string name="menu_add">Add</string>
    <string name="add_description">Clicked \"Add\"</string>
    <string name="settings_description">Clicked \"Settings\"</string>
    <string name="menu_search">Search</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_group_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_group_info">Info</string>
    <string name="nav_feedback_form">Feedback form</string>
    <string name="nav_about_the_developer">About the developer</string>
    <string name="nav_sensors">Sensors</string>
    <string name="sensor_temp_error">No temperature sensor!</string>
    <string name="sensor_hum_error">No humidity sensor!</string>
    <string name="list_item_date">12.12.2012</string>
    <string name="list_item_time">25 times</string>
    <string name="list_item_weight">30kg</string>
    <string name="nav_calendar">Calendar</string>
    <string name="calculate_btn">Calculate</string>
    <string name="res_text_view">0</string>
    <string name="calculate_task">Calculate task</string>
    <string name="nav_weather">Weather</string>
    <string name="item_change_city">Change city</string>
    <string name="place_not_found">Place not found. Check internet connection.</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="city_input_hint">Enter city</string>
    <string name="get">GET</string>
    <string name="temperature">Temperature</string>
    <string name="nav_weather_retrofit">Weather (Retrofit)</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="nav_time">Time</string>
</resources>
