<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_import_camera" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/nav_weather" />
        <item
            android:id="@+id/nav_weather_retrofit"
            android:icon="@drawable/ic_weather"
            android:title="@string/nav_weather_retrofit" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/ic_async_task"
            android:title="@string/calculate_task" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_sensors"
            android:title="@string/nav_sensors" />
    </group>

    <item android:title="@string/nav_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

    <item android:title="@string/nav_group_info">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback_form" />
            <item
                android:id="@+id/nav_developer_info"
                android:icon="@drawable/ic_android_dev_info"
                android:title="@string/nav_about_the_developer" />
        </menu>
    </item>
</menu>
