<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_city_retrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_city_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_input_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_get_city_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/get"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/temp_text_view_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/temperature"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/hum_text_view_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/humidity"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/press_text_view_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/pressure"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/image_view_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
