<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.WorkoutDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/workout_detail_title"
            android:layout_width="match_parent"
            android:text="Название упражнения"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/workout_detail_image_view"
            android:layout_width="320dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/woman_workout" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/recods_text"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WrapContentHW"
                    android:text="@string/date_text" />
                <TextView
                    style="@style/WrapContentHW"
                    android:id="@+id/workout_detail_record_date"
                    android:layout_marginLeft="4dp"
                    android:text="12.12.2012" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WrapContentHW"
                    android:text="@string/reps_count_text" />
                <TextView
                    style="@style/WrapContentHW"
                    android:id="@+id/workout_detail_record_reps_count"
                    android:layout_marginLeft="4dp"
                    android:text="123" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WrapContentHW"
                    android:text="@string/weight_text" />
                <TextView
                    style="@style/WrapContentHW"
                    android:id="@+id/workout_detail_record_weight"
                    android:layout_marginLeft="4dp"
                    android:text="120" />
                <TextView
                    style="@style/WrapContentHW"
                    android:layout_marginLeft="4dp"
                    android:text="@string/kg" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/weight_text"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workout_detail_weight"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/kg"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/workout_detail_seek_bar"
                android:layout_marginTop="4dp"
                android:max="200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/workout_detail_reps_count_edit_text"
                android:hint="@string/reps_count_text"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content" />

        </LinearLayout>

            <Button
                style="@style/WrapContentHW"
                android:id="@+id/workout_detail_save_button"
                android:layout_gravity="center"
                android:text="@string/save" />

            <Button
                style="@style/WrapContentHW"
                android:id="@+id/share_button"
                android:layout_gravity="center"
                android:text="@string/share_text" />
    </LinearLayout>
</ScrollView>