<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_more" />

        <ImageView
            android:id="@+id/list_item_image_view"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/list_item_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/list_item_more"
            android:layout_toRightOf="@+id/list_item_image_view"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title_mock_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_title_text_view"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/list_item_image_view"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/description_mock_text" />

        <View
            android:id="@+id/list_item_horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/list_item_image_view"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_horizontal_separator"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <LinearLayout style="@style/RecordLinearLayout">

                <ImageView
                    style="@style/WrapContentHW"
                    android:src="@drawable/ic_weight" />

                <TextView
                    android:id="@+id/list_item_record_weight"
                    style="@style/WrapContentHW"
                    android:text="@string/list_item_weight" />

            </LinearLayout>

            <LinearLayout style="@style/RecordLinearLayout">

                <ImageView
                    style="@style/WrapContentHW"
                    android:src="@drawable/ic_counter" />

                <TextView
                    android:id="@+id/list_item_record_reps_count"
                    style="@style/WrapContentHW"
                    android:text="@string/list_item_time" />

            </LinearLayout>

            <LinearLayout style="@style/RecordLinearLayout">

                <ImageView
                    style="@style/WrapContentHW"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/list_item_record_date"
                    style="@style/WrapContentHW"
                    android:text="@string/list_item_date" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>